[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
authors      = ["Reverier-Xu <reverier.xu@xdsec.club>"]
edition      = "2024"
homepage     = "https://github.com/XDSEC/WebSocketReflectorX"
license      = "MIT"
repository   = "https://github.com/XDSEC/WebSocketReflectorX"
rust-version = "1.85.0"
version      = "0.4.1"

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = 3
panic         = "abort"
strip         = true

[workspace.dependencies]
directories      = "6.0"
futures-util     = { version = "0.3", features = ["sink"] }
local-ip-address = "0.6"
rustls           = { version = "0.23", features = ["ring"] }
sysinfo          = "0.34"
thiserror        = "2.0"
tokio            = { version = "1.44", features = ["full"] }
tokio-util       = { version = "0.7", features = ["codec"] }

axum = { version = "0.8", features = ["ws", "macros"] }
# optional
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

# binary cli only
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4.5", features = ["derive"] }
once_cell          = { version = "1.21" }
rand               = { version = "0.9" }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
subprocess         = { version = "0.2" }
tower-http         = { version = "0.6", features = ["trace", "cors"] }
tracing            = { version = "0.1" }
tracing-appender   = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url                = { version = "2.5" }

# GUI
async-compat = { version = "0.2" }
i-slint-backend-winit = "1.10"
open = "5.3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "http2",
  "charset",
  "blocking",
] }
slint = { version = "1.10", default-features = false, features = [
  "std",
  "compat-1-2",
  "gettext",
  "serde",
  "accessibility",
  "backend-winit",
  "renderer-skia",
  "renderer-software",
] }
sys-locale = "0.3"
toml = "0.8"
winit = "0.30"

build-target  = "0.4"
git-version   = "0.3"
rustc_version = "0.4"
slint-build   = "1.10"
