[package]
name = "wsrx-cli"
version = "0.1.0"
edition = "2021"
authors = ["Reverier-Xu <reverier.xu@xdsec.club>"]
description = "Controlled TCP-over-WebSocket forwarding tunnel."

[dependencies]
wsrx = { version = "*", path = "../lib" }
tokio = { version = "1.27", features = ["full"] }
clap = {version = "4.2", features = ["cargo"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = "0.7"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.17"
url = "2.3"
log = "0.4"
simple_logger = "4.1"
