[package]
name = "wsrx-cli"
version = "0.1.5"
edition = "2021"
authors = ["Reverier-Xu <reverier.xu@xdsec.club>"]
description = "Controlled TCP-over-WebSocket forwarding tunnel."

[dependencies]
wsrx = { version = "*", path = "../lib" }
tokio = { version = "1.32", features = ["full"] }
clap = {version = "4.4", features = ["cargo"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = "0.7"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.18"
url = "2.4"
log = "0.4"
simple_logger = "4.2"
