[package]
name = "wsrx"
version = "0.1.4"
edition = "2021"
authors = ["Reverier-Xu <reverier.xu@xdsec.club>"]
description = "Controlled TCP-over-WebSocket forwarding tunnel."
homepage = "https://github.com/XDSEC/WebSocketReflectorX"
documentation = "https://docs.rs/wsrx"
repository = "https://github.com/XDSEC/WebSocketReflectorX"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
axum = { version = "0.6", features = [
    "headers",
    "ws",
    "http2",
    "multipart",
    "macros",
] }
tokio-util = "0.7"
tokio-stream = "0.1"
bytes = "1.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
toml = "0.7"
uuid = "1.4"
base64 = "0.21"
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
futures-util = "0.3"
