[package]
name = "wsrx"
version = "0.1.10"
edition = "2021"
authors = ["Reverier-Xu <reverier.xu@xdsec.club>"]
description = "Controlled TCP-over-WebSocket forwarding tunnel."
homepage = "https://github.com/XDSEC/WebSocketReflectorX"
documentation = "https://docs.rs/wsrx"
repository = "https://github.com/XDSEC/WebSocketReflectorX"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
axum = { version = "0.7", features = [
    "ws",
    "http2",
    "multipart",
    "macros",
], optional = true }
tokio-util = "0.7"
tokio-stream = "0.1"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
toml = "0.8"
uuid = "1.6"
base64 = "0.21"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"], optional = true }
tracing = "0.1"
futures-util = "0.3"

[features]
default = ["web"]
web = ["dep:axum"]
cli = ["dep:tokio-tungstenite"]
