[package]
name = "wsrx-desktop"
version = "0.1.13"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.7", package = "gtk4", features = ["v4_12"] }
relm4 = { version = "0.7.0-beta.2", features = ["macros", "libadwaita"] }
relm4-macros= "0.7.0-beta.2"
relm4-components= "0.7.0-beta.2"
relm4-icons = { version = "0.7.0-alpha.2", features = ["plus", "minus", "navigation-regular", "home-regular", "link-regular", "document-regular", "info-regular"] }

[build-dependencies]
glib-build-tools = "0.18.0"
