[package]
authors.workspace      = true
description            = "Controlled TCP-over-WebSocket forwarding tunnel."
documentation          = "https://docs.rs/wsrx"
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "wsrx-desktop"
readme                 = "../../README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
wsrx = { path = "../wsrx" }

i-slint-backend-winit = { workspace = true }
slint                 = { workspace = true }
winit                 = { workspace = true }

directories        = { workspace = true }
local-ip-address   = { workspace = true }
sysinfo            = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-appender   = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
build-target  = { workspace = true }
git-version   = { workspace = true }
rustc_version = { workspace = true }
slint-build   = { workspace = true }
