[package]
name = "wsrx-desktop"
version = "0.1.10"
description = "WSRX Desktop Frontend"
authors = ["Reverier-Xu <reverier.xu@xdsec.club>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "protocol-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wsrx = { version = "0.1", path = "../../lib", default-features = false, features = ["cli"]}
tokio = { version = "1.34", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.18"
url = "2.5"
log = "0.4"
reqwest = { version = "0.11", features = [
    "rustls-tls",
    "cookies",
    "gzip",
    "json",
], default-features = false }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
